NCL-8736: Fix artifact path determination and exclusion